--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -53,6 +53,11 @@
   line-height: 50px;
   font-size: 20px;
   margin-top: 20px;
+  display: block;
+}
+
+.regist-icon {
+  margin-right: 10px;
 }
 
 .email-button {
