いいね数表示

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<% console %>
 <main class="posts-index">
   <%= render 'shared/header' %>
   <section class="index-main-contents">
@@ -23,7 +24,7 @@
                 <dt><i class="far fa-comment fa-lg"></i></dt>
                 <dd>コメント3件<dd>
                 <dt><i class="far fa-heart fa-lg"></i></dt> 
-                <dd>いいね3件<dd>
+                <dd>いいね<%= post.likes.count %>件<dd>
               </dl>
             <div class="post-caption">
               <p><%= post.caption %></p>
