コメント数表示

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,7 +22,7 @@
             </div>
               <dl class="post-icon-lists">
                 <dt><i class="far fa-comment fa-lg"></i></dt>
-                <dd>コメント3件<dd>
+                <dd>コメント<%= post.comments.count %>件<dd>
                 <dt><i class="far fa-heart fa-lg"></i></dt> 
                 <dd>いいね<%= post.likes.count %>件<dd>
               </dl>
