--- a/app/assets/stylesheets/home/follower.css
+++ b/app/assets/stylesheets/home/follower.css
@@ -30,11 +30,29 @@
 }
 
 .follow-nickname {
-  font-size: 20px;
   margin-bottom: 5px;
 }
 
 .follow-id {
   font-size: 13px;
   color: #aa998a;
+}
+
+.message-start-button {
+  background-color: #9ec3bc;
+  color: white;
+  height: 30px;
+  line-height: 30px;
+  width: 200px;
+  text-align: center;
+  border-radius: 16px;
+  font-size: 15px;
+  display: block;
+  margin-bottom: 50px;
+}
+
+.message-button {
+  margin-top: 50px;
+  width: 100%;
+  padding-left: 530px;
 }
