--- a/app/views/home/_user_detail.html.erb
+++ b/app/views/home/_user_detail.html.erb
@@ -14,14 +14,21 @@
 
   <%# フォローボタン %>
   <div class="mypage-user-follow">
-    <% if current_user.following?(user) %>
-      <%= link_to "Unfollow", relationships_path(user_id: user.id), method: :delete,class: "unfollow-button"%>
+    <% if current_user.id != @user.id %>
+      <% if current_user.following?(user)  %>
+        <%= link_to "Unfollow", relationships_path(user_id: user.id), method: :delete,class: "unfollow-button"%>
+      <% else %>
+        <%= link_to "Follow", relationships_path(user_id: user.id), method: :post, class: "follow-button"%>
+      <% end %>
     <% else %>
-      <%= link_to "Follow", relationships_path(user_id: user.id), method: :post, class: "follow-button"%>
+      <%= link_to "アカウント情報編集", edit_account_path(Account.find(params[:id])), class: "unfollow-button"%>
     <% end %>
+
+    <%# フォロー・フォロワー数 %>
     <%= link_to "フォロー #{user.followings.count}", home_following_path(user), class: "user-follow-count"%>
     <%= link_to "フォロワー #{user.followers.count}", home_follower_path(user), class: "user-follow-count"%>
     
+    <%# ペット情報ボタン %>
     <% if @user.pet != nil%>
       <%= link_to home_profile_index_path(user) do %>
         <i class="fas fa-paw fa-lg pet-icon"></i>
