リキャプチャ一旦削除

--- a/app/views/devise/registrations/new_account.erb
+++ b/app/views/devise/registrations/new_account.erb
@@ -29,7 +29,7 @@
             end_year: (Time.now.year - 5),
             date_separator: '/') %>
       </div>
-      <%= recaptcha_tags %>
+      <%# recaptcha_tags %>
       <%= f.submit "登録する" ,class:"send" %>
       <%end%>
     </div>
