アカウント情報、ペット情報編集時のプレビュー表示

--- a/app/views/devise/registrations/edit_account.html.erb
+++ b/app/views/devise/registrations/edit_account.html.erb
@@ -4,29 +4,36 @@
       <h1 class="form-title">アカウント情報編集</h1>
 
       <%= form_with model: @account, url: update_account_path, local: true do |f| %>
-      <%# render "devise/shared/error_messages", model: f.object %>
+      <%= render "devise/shared/error_messages", model: f.object %>
         <div class="new-content">
-          <%= f.label :nickname,'ニックネーム' %>
+          <%= f.label :nickname,'ユーザー名' %>
           <%= f.text_field :nickname, class:"small-field", placeholder:"例）スズキ", maxlength:"40", autofocus: true  %>
         </div>
         <div class="new-content">
-          <%= f.label :account_id,'アカウントID' %>
+          <%= f.label :account_id,'ユーザーID' %>
           <%= f.text_field :account_id, class:"small-field", placeholder:"例）suzuki1234", maxlength:"40", autofocus: true  %>
         </div>
         <div class="new-content">
-          <%= f.label :birthday,'誕生日' %>
-          <%= f.text_field :birthday, class:"small-field", placeholder:"例）20000101", autofocus: true  %>
+          <%= f.label :birthday,'生年月日' %>
+          <%= f.date_select(:birthday,
+              class:'input-birth-wrap', 
+              id:"birthday",
+              use_month_numbers: true,
+              prompt:'--',
+              start_year: 1950,
+              end_year: (Time.now.year - 5),
+              date_separator: '/') %>        
         </div>
         <div class="new-content">
           <%= f.label :introduction,'自己紹介' %>
           <%= f.text_area :introduction, class:"small-field intro", placeholder:"250文字以内", maxlength:"250", autofocus: true  %>
         </div>
         <div class="new-content">
-          <%= f.label :images,'プロフィール画像' %>
-          <%= f.file_field :images %>
+          <%= f.label :image,'プロフィール画像' %>
+          <%= f.file_field :image, id:"posts-image" %>
         </div>
-        <div class="remove-img">
-          <p><%= f.check_box :remove_images %>画像を削除する</p>
+        <div class="img-field" id="image-list">
+          <div id="image-list"></div>
         </div>
         <%= f.submit "次へ" ,class:"send" %>
       <%end%>
