--- a/app/views/home/like_list.html.erb
+++ b/app/views/home/like_list.html.erb
@@ -1,26 +1,5 @@
 <main class="mypage">
-  <header class='top-page-header1'>
-    <p class="header-title1">wanday!</p>
-    <nav>
-      <%= link_to posts_path do %><i class="fas fa-home fa-lg user-icon"></i><% end %>
-      <i class="fas fa-search fa-lg user-icon"></i>
-      <i class="far fa-envelope fa-lg user-icon"></i>
-      <i class="far fa-bell fa-lg user-icon"></i>
-      <%= link_to new_post_path do %>
-        <i class="far fa-images fa-lg user-icon"></i>
-      <% end %>
-      <%= image_tag @user.account.images[0], class: "header-user-icon", id: "edit-lists" if @user.account.images.attached?%>
-      <% if @user.account.images.length == 0%>
-        <%= image_tag "profile-user.png" ,class:"header-user-icon" ,id: "edit-lists" %>
-      <% end %>
-      <ul class="edit-lists hidden" id="edit-pull-down">
-        <li class="pull-down-edit-list"><%= link_to "ユーザー情報編集", edit_user_registration_path(@user) %></li>
-        <li class="pull-down-edit-list"><%= link_to "アカウント情報編集", edit_account_path(@account)%></li>
-        <li class="pull-down-edit-list"><%= link_to "ログアウト", destroy_user_session_path, method: :delete%></li>
-      </ul>
-    </nav>
-  </header>
-
+  <%= render 'shared/show_header' %>
   <section>
     <div class="mypage-contents">
     <%= render partial: 'user_detail', locals: { user: @user } %>
