--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,47 +1,5 @@
 <main class="mypage">
-  <header class='top-page-header1'>
-    <p class="header-title1">wanday!</p>
-    <nav>
-      <%= link_to posts_path do %>
-        <i class="fas fa-home fa-lg user-icon"></i>
-      <% end %>
-      <%= link_to search_posts_path do %>
-        <i class="fas fa-search fa-lg user-icon"></i>
-      <% end %>
-      <%# <i class="far fa-envelope fa-lg user-icon"></i> %>
-      <%# <i class="far fa-bell fa-lg user-icon"></i> %>
-      <%= link_to items_path do %>
-        <i class="fas fa-gifts fa-lg user-icon"></i>
-      <% end %>
-      <%= link_to shops_path do %>
-        <i class="fas fa-store fa-lg user-icon"></i>
-      <% end %>
-      <%= link_to calendars_path do %>
-        <i class="far fa-calendar-alt user-icon fa-lg "></i>
-      <% end %>
-      <%= link_to new_post_path do %>
-        <i class="far fa-images fa-lg user-icon"></i>
-      <% end %>
-      <%= link_to home_following_path(current_user) do %>
-        <i class="far fa-envelope fa-lg user-icon"></i>
-      <% end %>
-      <%= image_tag current_user.account.images[0], class: "header-user-icon", id: "edit-lists" if current_user.account.images.attached?%>
-      <% if current_user.account.images.length == 0%>
-        <%= image_tag "profile-user.png" ,class:"header-user-icon" ,id: "edit-lists" %>
-      <% end %>
-      <%# ハンバーガーメニュー実装 %>
-      <div class="nav-sp">
-        <ul>
-          <li><%= link_to "ユーザー情報編集", edit_user_registration_path(@user) %></li>
-          <li><%= link_to "ペット情報登録", home_profile_new_path(@account)%></li>
-          <li><%= link_to "ペット情報編集", home_profile_edit_path(@account) %></li>
-          <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete%></li>
-        </ul>
-      </div>
-    </nav>
-    <script src="menu.js"></script>
-  </header>
-
+  <%= render 'shared/show_header' %>
   <section>
     <div class="mypage-contents">
     <%= render partial: 'user_detail', locals: { user: @user } %>
