--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div class="show-caption-field">
         <% @post.tags.each do |tag| %>
-          <%= "#" + tag.name %>
+          <%= "#" + tag&.name %>
         <% end %>
       </div>
 
