タグ検索ができるように修正

--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -12,8 +12,8 @@
         </div>
         <div class="search-field">
           <%= f.label :account_nickname_cont, 'ユーザー名' %>
-          <%= f.text_field :account_nickname_cont, placeholder: 'ユーザー検索', class:"search-small-field" %>
-        </div>
+          <%= f.text_field :account_nickname_or_tags_name_cont, placeholder: 'ユーザー検索', class:"search-small-field" %>
+        </div>       
         <div class="search-field">
           <%= f.submit '検索', class:"search-button" %>
         </div>
