--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
     <%# 投稿一覧 %>
     <section class="main-left">
       <ul class="follow-posts">
-        <% @posts.each do |post|%>
+        <% @posts.includes(:account).each do |post|%>
           <li class="follow-post">
             <div class="post-title">
               <%= link_to image_tag(post.account.images[0], class: "title-icon"), home_path(post.user_id) if post.account.images.attached?%>
