--- a/app/assets/stylesheets/posts/search.css
+++ b/app/assets/stylesheets/posts/search.css
@@ -34,3 +34,37 @@
   border: solid 1px #eadfca;
   margin-left: 20px;
 }
+
+/* 話題の投稿 */
+:root {
+  --swiper-navigation-color: #ffffff;
+  --swiper-pagination-color: #ffffff;
+}
+
+.post-rank {
+  padding: 70px 0;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide .slide-content p {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-shadow: 0.5px 0.5px rgba(0, 0, 0, 0.6);
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+}
+
+.rank-pic {
+  width: 100%;
+  height: 100%;
+}
