コメント数、いいね数反映

--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -47,9 +47,9 @@
             </div>
               <dl class="post-icon-lists">
                 <dt><i class="far fa-comment fa-lg"></i></dt>
-                <dd>コメント3件<dd>
+                <dd>コメント<%= post.comments.count %>件<dd>
                 <dt><i class="far fa-heart fa-lg"></i></dt> 
-                <dd>いいね3件<dd>
+                <dd>いいね<%= post.likes.count %>件<dd>
               </dl>
             <div class="post-caption">
               <p><%= post.caption %></p>
