カラム名修正

--- a/app/views/devise/registrations/edit_account.html.erb
+++ b/app/views/devise/registrations/edit_account.html.erb
@@ -29,8 +29,8 @@
           <%= f.text_area :introduction, class:"small-field intro", placeholder:"250文字以内", maxlength:"250", autofocus: true  %>
         </div>
         <div class="new-content">
-          <%= f.label :image,'プロフィール画像' %>
-          <%= f.file_field :image, id:"posts-image" %>
+          <%= f.label :images,'プロフィール画像' %>
+          <%= f.file_field :images, id:"posts-image" %>
         </div>
         <div class="img-field" id="image-list">
           <div id="image-list"></div>
