ペットの画像編集できるように

--- a/app/views/home/profile_edit.html.erb
+++ b/app/views/home/profile_edit.html.erb
@@ -34,8 +34,8 @@
           <%= f.text_field :character, class:"small-field", placeholder:"例）いたずら好き", autofocus: true  %>
         </div>
         <div class="new-content">
-          <%= f.label :images,'プロフィール画像' %>
-          <%= f.file_field :images, id:"posts-image" %>
+          <%= f.label :image,'プロフィール画像' %>
+          <%= f.file_field :image, id:"posts-image" %>
         </div>
         <div class="img-field" id="image-list">
           <div id="image-list"></div>
