--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,8 +12,8 @@
                 <%= link_to image_tag('profile-user.png', class: "title-icon"), home_path(post.user_id) %>
               <% end %>
               <div class="title-content">
-                <p class="title-content-nickname"><%= post.account.nickname %></p>
-                <p class="title-content-id"><%= post.account.account_id %></p>
+                <p class="title-content__nickname"><%= post.account.nickname %></p>
+                <p class="title-content__id"><%= post.account.account_id %></p>
               </div>
             </div>
             <div class="post-pic">
