--- a/app/views/shared/_userpro.html.erb
+++ b/app/views/shared/_userpro.html.erb
@@ -6,10 +6,10 @@
     <%= link_to image_tag(current_user.account.images[0], class: "index-user-icon"), home_path(current_user) %>
   <% end %>
   <div class="index-user-show">
-    <p class="user-show-nickname"><%= current_user.account.nickname %></p>
-    <p class="user-show-id"><%= current_user.account.account_id %></p>
-    <p class="user-show-birthday"><%= current_user.account.birthday %></p>
-    <p class="user-show-info"><%=  current_user.account.introduction %></p>
+    <p class="index-user-show__nickname"><%= current_user.account.nickname %></p>
+    <p class="index-user-show__id"><%= current_user.account.account_id %></p>
+    <p class="index-user-show__birthday"><%= current_user.account.birthday %></p>
+    <p class="index-user-show__info"><%=  current_user.account.introduction %></p>
   </div>
 
   <%# ペットプロフィール %>
