--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -29,34 +29,8 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
       </div>
-      <ul class="follow-posts">   
-        <% @posts.includes(:account).each do |post|%>
-          <li class="follow-post">
-            <div class="post-title">
-              <%= link_to image_tag(post.account.images[0], class: "title-icon"), home_path(post.user_id) if post.account.images.attached?%>
-              <% if post.account.images.length == 0%>
-                <%= link_to image_tag('profile-user.png', class: "title-icon"), home_path(post.user_id) %>
-              <% end %>
-              <div class="title-content">
-                <p class="title-content__nickname"><%= post.account.nickname %></p>
-                <p class="title-content__id"><%= post.account.account_id %></p>
-              </div>
-            </div>
-            <div class="post-pic">
-              <%= link_to image_tag(post.images[0].variant(gravity: :center, resize:"800x500^",crop:"800x500+0+0").processed  ,class: "post-pic"), post_path(post)%>
-            </div>
-              <dl class="post-icon-lists">
-                <dt><i class="far fa-comment fa-lg"></i></dt>
-                <dd>コメント<%= post.comments.count %>件<dd>
-                <dt><i class="far fa-heart fa-lg"></i></dt> 
-                <dd>いいね<%= post.likes.count %>件<dd>
-              </dl>
-            <div class="post-caption">
-              <p><%= post.caption %></p>
-            </div>
-          </li>
-        <% end %>
-      </ul>
+      
+      <%= render partial: 'post-list', locals: { post: @posts }  %> 
      
       <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
       <script>
