ログインページフッター部分テンプレート適用

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,10 +21,7 @@
     <div class="right-text">
       <p><%= link_to "ログイン", new_user_session_path, class: "login-text" %>のかたはこちら</p>
     </div>
-    <footer>
-      <p class="footer-title">wanday!</p>
-      <p class="footer-text">Copyright © 2021 wanday! All rights reserved.</p>
-    </footer>
+    <%= render 'shared/footer' %>
   </section>
 </main>
 
