erbファイルに表示部分の追記

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,6 +27,7 @@
           <%= "#" + tag&.name %>
         <% end %>
       </div>
+      <div id="grayDisplay"></div>
 
 
       <div class="show-sub-contents">
