--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -1,7 +1,3 @@
-.posts-new {
-  width: 100%;
-}
-
 .top-page-header {
   background-color: #eadfca;
   height: 10vh;
@@ -28,16 +24,19 @@
 .img-field {
   margin-bottom: 50px;
   padding: 0px 100px 0px 100px;
-  text-align: center;
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 100%;
   flex-wrap: wrap;
 }
 
-.edit-images,
-.new-images {
+#image-list {
+  img {
+    height: 200px;
+    margin: 5px;
+  }
+}
+
+.edit-images {
   height: auto;
   max-width: 180px;
 }
@@ -55,24 +54,7 @@
   color: #aa998a;
 }
 
-#image-list img {
-  width: 200px;
-  margin: 10px;
-  border: solid 1px silver;
-}
-
-.click-upload {
-  margin: 15px 0;
-  min-width: 250px;
-}
-
-.click-upload > p {
-  margin-bottom: 15px;
-}
-
 .posts-new-contents {
-  min-height: calc(100vh - 26vh);
-  width: 100%;
   padding-top: 50px;
 }
 
@@ -82,7 +64,6 @@
 
 .caption-field {
   display: block;
-  background: #ffffff;
   border-radius: 4px;
   border: solid 1px #aa998a;
   height: 50px;
@@ -108,10 +89,6 @@
 .form-title {
   color: #aa998a;
   font: 700 28px/1.4 "Noto Sans JP";
-  height: auto;
   text-align: center;
-  width: 100%;
-  max-width: 100%;
-  justify-content: center;
   margin-bottom: 50px;
 }
