--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
         <i class="fas fa-edit" id="lists"></i>
         <ul class="show-contents__lists hidden" id="pull-down">
           <li><%= link_to '編集する', edit_post_path(@post), method: :get,class: "show-contents__lists__pull-down" %></li>
-          <li><%= link_to '削除する', post_path(@post), method: :delete,class: "show-lists__pull-down" %></li>
+          <li><%= link_to '削除する', post_path(@post), method: :delete,class: "show-contents__lists__pull-down__delete" %></li>
         </ul>
       <% end %>
 
