--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,31 +1,29 @@
-<main class="posts-new">
-  <%= render 'shared/header' %>
-  <section>
-    <div class="posts-new-contents">
-      <h1 class="form-title">写真を編集する</h1>
+<%= render 'shared/header' %>
+<section class="posts-new-contents">
+  <h1 class="form-title">写真を編集する</h1>
 
-      <%= form_with model: @post, local: true do |f| %>
-      <%= render "devise/shared/error_messages", model: f.object %>
-      <div class="img-field" id="image-list">
-        <%# <div id="image-list"></div> %>
-          <% @post.images.each do |image| %>
-            <%= image_tag image, class: 'edit-images' %>
-          <% end %>
+  <%= form_with model: @post_form, url: post_path, local: true do |f| %>
+  <%= render "devise/shared/error_messages", model: f.object %>
+  <div class="img-field" id="image-list">
+      <% @post.images.each do |image| %>
+        <%= image_tag image, class: 'edit-images' %>
+      <% end %>
 
-        <label class="form-image">
-          <i class="fas fa-images fa-2x "></i>
-          <%= f.file_field :images, id:"posts-image" ,name: 'post[images][]' ,class: "hidden",multiple: true, data: {index: 0}%>
-        </label>
-      </div>
-      <p class="img-explanation">
-        クリックして写真をアップロード
-      </p>
-      <div class="posts-new-content">
-        <%= f.text_area :caption, class:"caption-field", id:"caption", placeholder:"キャプションを書く", maxlength:"250" %>
-      </div>
-        <%= f.submit "編集する" ,class:"posts-new-send" %>
-      <%end%>
+    <label class="form-image">
+      <i class="fas fa-images fa-2x "></i>
+      <%= f.file_field :images, id:"posts-image" ,name: 'post[images][]' ,class: "hidden",multiple: true, data: {index: 0}%>
+    </label>
+  </div>
+    <p class="img-explanation">
+      アイコンをクリックして写真をアップロード【必須】（4枚まで）
+    </p>
+    <div class="posts-new-content">
+      <%= f.text_area :caption, class:"caption-field", id:"caption", placeholder:"キャプションを書く（任意）", maxlength:"250" %>
     </div>
-  </section>
-  <%= render 'shared/footer' %>
-</main>
+    <div class="posts-new-content">
+      <%= f.text_area :tag_name, class:"caption-field", id:"tag", placeholder:"タグ名（任意）※タグを複数選択する際は半角スペースで区切って投稿してください", maxlength:"250" %>
+    </div>
+    <%= f.submit "編集する" ,class:"posts-new-send" %>
+  <%end%>
+</section>
+<%= render 'shared/footer' %>
