--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -92,3 +92,9 @@
   text-align: center;
   margin-bottom: 50px;
 }
+
+.img-delete-list {
+  text-align: center;
+  color: #aa998a;
+  margin: 10px 5px 50px;
+}
