--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,35 +1,31 @@
-<main class="posts-index">
-  <%= render 'shared/header' %>
-  <section class="index-main-contents">
-    <section class="main-left">
-      <h1 class="item-review-title">Item Review</h1>
-      
-      <div class="shop-contents-link">
-        <%= link_to "商品情報登録", new_item_path, class: "item-register-buttton" %>
-        <%= link_to "商品を検索する", search_items_path, class: "shop-search-buttton" %>
-      </div> 
+<%= render 'shared/header' %>
+<main class="index-main-contents">
+  <section class="main-left">
+    <h1 class="item-review-title">Item Review</h1>
+    
+    <div class="shop-contents-link">
+      <%= link_to "商品情報登録", new_item_path, class: "item-register-buttton" %>
+      <%= link_to "商品を検索する", search_items_path, class: "item-register-buttton" %>
+    </div> 
 
-      <%# レビュー一覧 %>
-      <ul class="item-lists">
-        <% @items.each do |item|%>
-          <%= link_to item_path(item) do %>
-            <li class="item-list">
-              <div class="item-image">
-                <%= image_tag item.images[0] %>
+    <%# レビュー一覧 %>
+    <ul class="item-lists">
+      <% @items.each do |item|%>
+        <%= link_to item_path(item) do %>
+          <li class="item-list">
+            <%= image_tag item.images[0].variant(gravity: :center, resize:"90x110^",crop:"90x110+0+0").processed %>
+            <div class="item-list__contents">
+              <div class="item-list__title"><%= item.name %></div>
+                <div class="item-list__date"><p><%= item.updated_at.to_s(:datetime) %></p></div>
               </div>
-              <div class="item-contents">
-                <div class="item-title"><%= item.name %></div>
-                  <div class="item-date"><p><%= item.updated_at.to_s(:datetime) %></p></div>
-                </div>
-              </div>
-            </li>
-          <% end %>
+            </div>
+          </li>
         <% end %>
-      </ul>
-    </section>
-
-    <%# ユーザー情報 %>
-  <%= render partial: 'shared/userpro', locals: { pet: @pet } %>
+      <% end %>
+    </ul>
   </section>
-  <%= render 'shared/footer' %>
+
+  <%# ユーザー情報 %>
+  <%= render partial: 'shared/userpro', locals: { pet: @pet } %>
 </main>
+<%= render 'shared/footer' %>
