ショップ修正

--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -6,7 +6,7 @@
       
       <div class="shop-contents-link">
         <%= link_to "お店情報登録", new_shop_path, class: "item-register-buttton" %>
-        <%= link_to "お店を検索する", search_shops_path, class: "shop-search-buttton" %>
+        <%= link_to "お店を検索する", search_shops_path, class: "item-register-buttton" %>
       </div> 
 
 
