不要な記述の削除

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,4 @@
-<main class="posts-new">
+<%# <main class="posts-new"> %>
   <%= render 'shared/header' %>
   <section>
     <div class="posts-new-contents">
@@ -7,4 +7,4 @@
     </div>
   </section>
   <%= render 'shared/footer' %>
-</main>
+<%# </main> %>
