スペルミス修正

--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -11,7 +11,7 @@
   a:last-child {
     margin: 0 0 50px 20px;
   }
-  .item-register-buttton {
+  .item-register-button {
     background-color: #9ec3bc;
     color: white;
     height: 30px;
