--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,8 +4,8 @@
     <h1 class="item-review-title">Item Review</h1>
     
     <div class="shop-contents-link">
-      <%= link_to "商品情報登録", new_item_path, class: "item-register-buttton" %>
-      <%= link_to "商品を検索する", search_items_path, class: "item-register-buttton" %>
+      <%= link_to "商品情報登録", new_item_path, class: "item-register-button" %>
+      <%= link_to "商品を検索する", search_items_path, class: "item-register-button" %>
     </div> 
 
     <%# レビュー一覧 %>
