--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -4,8 +4,8 @@
     <h1 class="item-review-title">Shop Review</h1>
     
     <div class="shop-contents-link">
-      <%= link_to "お店情報登録", new_shop_path, class: "item-register-buttton" %>
-      <%= link_to "お店を検索する", search_shops_path, class: "item-register-buttton" %>
+      <%= link_to "お店情報登録", new_shop_path, class: "item-register-button" %>
+      <%= link_to "お店を検索する", search_shops_path, class: "item-register-button" %>
     </div> 
 
     <%# レビュー一覧 %>
