--- a/app/views/shops/search.html.erb
+++ b/app/views/shops/search.html.erb
@@ -5,7 +5,7 @@
       <h1 class="item-review-title">Shop Search</h1>
       
       <div class="shop-contents-link">
-        <%= link_to "一覧に戻る", shops_path, class: "item-register-buttton" %>
+        <%= link_to "一覧に戻る", shops_path, class: "item-register-button" %>
       </div> 
 
      <%# ショップ検索 %>
